--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,50 +1,38 @@
 .login-div {
+    font-family: var(--font-family-type);
     margin: auto;
     width: 70%;
     padding: 10px;
 }
 
-.login-div button {
-    font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
-    background: rgba(45, 171, 196, 0.85);
-    border-radius: 8px;
-    border: none;
-    padding: 8px 20px;
-    width: 80px;
-    margin-bottom: 16px;
+.login-div-disabled {
+    font-family: var(--font-family-type);
+    margin: auto;
+    width: 70%;
+    padding: 10px;
+    pointer-events: none;
+    opacity: 0.4;
 }
 
-.login-div button:hover {
-    font-weight: bold;
-}
-
-.login-div h1 {
+.login-div h1, .login-div-disabled h1 {
+    color: var(--primary-color);
     font-size: 50px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgba(45, 171, 196, 0.85);
     margin-top: 16px;
 }
 
-.login-div h2 {
+.login-div h2, .login-div-disabled h2 {
     display: flex;
     align-items: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 16px;
     margin-bottom: 24px;
 }
 
-.login-div h4 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.login-div input {
+.login-div input, .login-div-disabled input {
     width: 100%;
     height: 32px;
     font-size:24px;
     border-radius: 8px;
-    border-color: rgb(218, 206, 206);
+    border-color: var(--secondary-color);
     border-width: 1px;
     margin-bottom: 20px;
     padding-left: 8px;
@@ -54,17 +42,17 @@
     font-size: 20px;
 }
 
-.login-div .link {
+.login-div .link, .login-div-disabled .link {
     text-decoration: none;
-    color: rgba(45, 171, 196, 0.85);
+    color: var(--primary-color);
 }
 
 .login-div .link:hover {
-    color: rgba(35, 119, 136, 0.85);
+    color: var(--primary-color-dark);
 }
 
 .login-div .error {
-    color: rgba(226, 29, 29, 0.85);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--error-color-dark);
     font-weight: bold;
+    font-size: 16px;
 }
