--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -4,7 +4,8 @@
 }
 
 .main-menu {
-  background: rgba(45, 171, 196, 0.85);
+  background: var(--primary-color);
+  font-family: var(--font-family-type);
   padding: 0.5rem 1rem;
 }
 
@@ -17,26 +18,33 @@
 }
 
 .main-menu a {
-  color: #fff;
+  color: var(--text-color);
   text-decoration: none;
 }
 
 .main-menu .right-side-links {
-    margin-left: auto;
-    font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 0.6cm;
-    gap: 30px;
+  margin-left: auto;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 0.6cm;
+  gap: 30px;
 }
 
 .main-menu .logo {
-    font-size: 26px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 0.6cm;
-    margin-top: 0.25cm;
-    margin-bottom: 0.25cm;
+  font-size: 26px;
+  margin-left: 0.6cm;
+  margin-top: 0.25cm;
+  margin-bottom: 0.25cm;
+}
+
+.welcome {
+  color: var(--primary-color-dark);
+  font-size: 20px;
+}
+
+.logout {
+  vertical-align: middle;
 }
